# cookiecutter-pypoetry

./: CONTRIBUTING.rst  LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: LICENSE  devenv.nix  envrc  flake.nix  pyproject.toml
